--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -7,11 +7,8 @@
                 <div class="card-body p-4 px-5">
                 <div class="text-center">
                     <h1 class="mb-3 mt-2">Vytvořit účet</h1>
-                    <p class="text-smaller text-muted text-center mb-0">
-                        Většina obsahu InLege je po registraci dostupná zdarma. Napořád. <br>
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#moreInfo">Zjistit více</a>
-                    </p>
                 </div>
+                <!--
                 <div class="text-center mt-3">
                     <a class="btn btn-outline-danger w-100 mt-2" href="/auth/google">
                     <i class="fab fa-google me-1"></i> Registrovat se přes Google
@@ -20,48 +17,24 @@
                 <div class="text-center my-2">
                     <span class="text-muted"><small>nebo</small></span>
                 </div>
+                -->
                 <% if (requiresPremium) { %>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/new?requiresPremium=true" method="POST">
                 <% } else { %>
                 <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/new" method="POST">
                 <% } %> 
-                    <div class="mt-2">
-                        <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Jméno" required>
-                    </div>
-                    <div class="mt-3">
-                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Příjmení" required>
-                    </div>
                     <div class="mt-3">
                         <input type="email" class="form-control" id="email" name="email" placeholder="E-mail" required>
                     </div>
                     <div class="mt-3">
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Heslo" minlength=6 required>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Heslo" minlength=8 required>
                         <div class="invalid-feedback">
-                            Heslo musí obsahovat nejméně 6 znaků.
+                            Heslo musí obsahovat nejméně 8 znaků.
                         </div>
-                    </div>
-                    <div class="mt-3">
-                        <input type="password" class="form-control" id="password_confirmation" name="password_confirmation" placeholder="Heslo pro kontrolu" minlength=6 required>
-                        <div class="invalid-feedback">
-                            Heslo musí obsahovat nejméně 6 znaků.
-                        </div>
-                    </div>
-                    <div>
-                        <select class="form-select" name="faculty" id="faculty">
-                            <option selected value="Neuvedeno">Zvolte fakultu</option>
-                            <option value="PrF UP">Studuji PrF UP</option>
-                            <option value="PrF UK">Studuji PrF UK</option>
-                            <option value="PrF MUNI">Studuji PrF MUNI</option>
-                            <option value="PrF ZČU">Studuji PrF ZČU</option>
-                            <option value="Jiná">Jiná</option>
-                            <option value="Uchazeč">Hlásím se ke studiu</option>
-                            <option value="Nestuduji">Již nestuduji</option>
-                            <option value="Neuvedeno">Nechci uvést</option>
-                          </select>
                     </div>
                     <div>
                         <select class="form-select" name="source" id="source">
-                            <option selected value="neuvedeno">Jak jste se o nás dozvěděli?</option>
+                            <option selected value="neuvedeno">Jak jste se o Edookio dozvěděli?</option>
                             <option value="pratele">Od kamaráda/ky</option>
                             <option value="ucitele">Od učitele/ky</option>
                             <option value="instagram">Na Instagramu</option>
@@ -167,23 +140,5 @@
     </div>
     </div>
 </div>
-
-<!-- MODAL - Info o financi politice -->
-<div class="modal fade" id="moreInfo" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body" style="text-align: center;">
-            <h4 class="modal-title mb-3" style="text-align: center;">Naše vize a obsah zdarma</h4>
-            <p class="px-3" style="text-align: left;">V InLege věříme, že kvalitní studijní materiály by měly být dostupné <strong>každému a bezplatně</strong>. Proto jsme se rozhodli udržet <strong>nejméně 50 % kartiček</strong> vždy zdarma. Registrace je nutná pouze pro ukládání tvých rozpracovaných balíčků, správný chod portálu a přístup k testovým otázkám.</p>
-            <p class="px-3" style="text-align: left;"><strong>Registrace</strong> je bezplatná a <strong>nezavazuje tě k žádné platbě</strong>, a to ani v budoucnu. Můžeš klidně využívat InLege v jeho bezplatné verzi tak dlouho, jak ti bude vyhovovat.</p>
-            <p class="px-3" style="text-align: left;">Pro ty, kteří mají větší nároky na obsah a další funkce, jsme připravili <strong>možnost aktivovat</strong> si pravidelné <strong>předplatné Premium</strong> od 124 Kč měsíčně, které lze kdykoliv zrušit. InLege je však navržené tak, aby bylo i v bezplatné verzi užitečné a pomáhalo ti efektivně se připravovat na zkoušky.</p>
-            <p><button class="btn btn-outline-danger" data-bs-dismiss="modal">Zavřít</button></p>
-        </div>
-      </div>
-    </div>
-  </div>
     
     <script src="/js/validateForms.js"></script>
